--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <form action="">
+    <form action="" id="loginForm">
         <input type="email" placeholder="введите почту" id="email">
         <input type="text" name="" id="username"plaseholder="ввидите логин">
         <input type="password" name="" id="password"plaseholder="ввидите пароль">
